--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <h1><font face="標楷體">大自然之旅</font><h1>
 <h2><font face="微軟正黑體">風景</font><h2>
-<img src="image/pic1.jpg" border="2" height="107" width="160">
-<img src="image/pic2.jpg" border="2" height="107" width="160">
+<img src="image/pic1.jpg.jpg" border="2" height="107" width="160">
+<img src="image/pic2.jpg.jpg" border="2" height="107" width="160">
 <br>
 <font face="細明體">
 隨風搖曳
